# riichi-rs

./: .gitignore  Cargo.toml  README.md  README_BUNDLERS.md  README_NODE.md  build.sh
demo/: index.html  index.js  package-lock.json  package.json
src/: lib.rs  riichi_rs.d.ts  riichi_rs_bundlers.js  riichi_rs_node.js
