[package]
name = "riichi-rs"
version = "2.1.0"
authors = ["Oleg Klimenko <me@ctizen.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
riichi-rust = { git = "https://github.com/MahjongPantheon/riichi-rust.git", version = "2.1.0" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"